[project]
name = "llm-news-framing-analysis"
version = "0.1.0"
description = "Automated news framing analysis tool based on Robert Entman's methodology using Groq LLM intelligence."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "requests",
    "beautifulsoup4",
    "lxml",
    "networkx",
    "matplotlib",
    "nltk",
    "scikit-learn",
    "langdetect",
    "groq",
    "pydantic",
]
